detalhes da apresentação

--- a/apresentacao/spreg_rural_insurance.tex
+++ b/apresentacao/spreg_rural_insurance.tex
@@ -349,6 +349,13 @@ Geralmente a estrutura espacial contribui para a modelagem de duas formas:
             
             $$\xi = \lambda W \xi + \varepsilon \quad \text{ ou }\quad  \xi_i = \lambda \sum_{j=1}^{n} w_{ij} u_j + \varepsilon$$
         \end{block}
+    \end{itemize}
+\end{frame}
+
+\begin{frame}{Modelando a dependência espacial}
+    \begin{itemize}
+        \item \textbf{Modelo de erro auto-regressivo espacial (\textit{SEM -- Spatial Error Model})}
+        \vspace{0.5cm}
         \noindent 
         \begin{itemize}
             \item \textbf{Processo espacial:}
